# slides-workshopgenAI-unece2025

./: .gitignore  .nojekyll  LICENSE  README.md  _quarto.yml  biblio.bib  custom.css  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: website.yaml
img/drawio/: statbot-archi-1-parsing.drawio  statbot-archi-2-embedding.drawio  statbot-archi-3-generative.drawio  statbot-archi-full.drawio  statbot-archi.drawio
img/observable/: _hallucination.qmd  _retriever.qmd
slides-data/: _interactive_parquet.qmd  api.qmd  lazy.excalidraw.json  parquet.qmd
slides-data/images/: serveur-modele.excalidraw.json
