[project]
name = "masterclass-api"
version = "0.1.0"
description = "Environnement masterclass API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartiflette>=0.1.6",
    "duckdb>=1.2.1",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
